--- a/mycss.css
+++ b/mycss.css
@@ -57,7 +57,7 @@
 .manu-content {
     background-color: rgb(85, 27, 219);
     border: 2px solid rgb(85, 27, 219);
-    border-radius: 20px;
+    /* border-radius: 20px; */
     width: 100%;
 }
 
@@ -99,7 +99,7 @@ ol li{
 .main {
     width: 100%;
     background-color: rgb(178, 240, 235);
-    position: absolute;
+    /* position: absolute; */
     
 }
 .main-side {
@@ -154,19 +154,23 @@ ol li{
     margin-top: 10%;
 }
 
-
+.dropdown {
+    position: absolute;
+}
 .dropbtn {
-    background-color: #3498DB;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
+    font-size: 16px;    
     border: none;
-    cursor: pointer;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
 }
 
 .dropbtn:hover,
 .dropbtn:focus {
-    background-color: #2980B9;
+    background-color: #111111;
 }
 
 .dropdown {
@@ -176,13 +180,12 @@ ol li{
 
 .dropdown-content {
     display: none;
-    position: absolute;
+    position: relative;
     background-color: #f1f1f1;
     min-width: 160px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-    position: absolute;
 }
 
 .dropdown-content a {
