--- a/mycss.css
+++ b/mycss.css
@@ -44,7 +44,7 @@
     width: 100%;
     height: 30%;
 }
-.content {
+.main-manu {
     height: auto;
     margin-top: 30%;
 }
@@ -140,7 +140,10 @@ ol li{
 .myLink {
     width: fit-content;
 }
-
+    
+.pointerCursor {
+    cursor: pointer;
+}
 
 
 
